kubernetes/mongodb.yml
apiVersion: v1
kind: Service
metadata:
  name: todo-api-mongodb
  labels:
    app: todo-api
spec:
  ports:
    - port: 27017
  selector:
    app: todo-api
    tier: mongodb
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  labels:
    app: todo-api
spec:
  selector:
    matchLabels:
      app: todo-api
      tier: mongodb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: todo-api
        tier: mongodb
    spec:
      containers:
      - image: mongo
        name: mongodb
        ports:
        - containerPort: 27017
          name: mongodb
