kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: todo.kube.kfj.io # Valid FQDN
    http:
      paths:
      - path: /
        backend:
          serviceName: todo-api
          servicePort: 8000
